--- a/academics.html
+++ b/academics.html
@@ -87,7 +87,7 @@
             <a href="#" target="_blank" style="text-decoration: none;">
                 <div class="card">3-1</div>
             </a>
-            <a href="#" target="_blank" style="text-decoration: none;">
+            <a href="https://drive.google.com/folders/1nP4NQ2pRZhEhRIK2iunqt50vPxXvg7zc" target="_blank" style="text-decoration: none;">
                 <div class="card">3-2</div>
             </a>
             <a href="#" target="_blank" style="text-decoration: none;">
