--- a/placement.html
+++ b/placement.html
@@ -181,5 +181,5 @@ font-size: 20px;
     </style>
     
     <div class="footer">
-      <p>ACET - IT DIVISION</p>
+      <p>ACET - ECE DIVISION</p>
     </div>
